--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
+    "@mui/styled-engine-sc": "^5.4.2",
     "@supabase/supabase-js": "^1.30.7",
     "react": "^17.0.1",
+    "react-carousel-minimal": "^1.4.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.0",
+    "react-swipeable-views": "^0.14.0",
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
